# ProgrammingFAbot

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
core/: config.py  texts.py
